--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
   <meta name="author" content="APS DECORATIVE - Amol Sahane" />
   <link rel="canonical" href="https://apsdecorative.com" />
 
+  <!-- Optimization Hints -->
+  <link rel="preconnect" href="https://images.unsplash.com" />
+  <link rel="preconnect" href="https://player.vimeo.com" />
+  <link rel="dns-prefetch" href="https://images.unsplash.com" />
+  <link rel="dns-prefetch" href="https://player.vimeo.com" />
+
   <meta property="og:title" content="APS DECORATIVE | Stamped Concrete Specialists" />
   <meta property="og:description"
     content="Premium stamped concrete designs with 12+ years experience. 1K+ happy customers. Design + Strength + Craftsmanship — Stamped to Last." />
